--- a/OUTROS/pesquisa.ipynb
+++ b/OUTROS/pesquisa.ipynb
@@ -44,11 +44,7 @@
     }
    ],
    "source": [
-    "df_prod = pd.read_excel(ar_xlsx.ar_96, usecols= ['CODPROD', 'QTUNITCX', 'CAPACIDADE', 'PONTOREPOSICAO','QTTOTPAL'])\n",
-    "df_bloq = pd.read_excel(ar_xls.ar_86, usecols=['Código', 'Bloqueado(Qt.Bloq.-Qt.Avaria)'])\n",
-    "end_ger = pd.read_csv(ar_csv.ar_07, header= None, names= col_name.c07)  \n",
-    "df_end = pd.read_csv(ar_csv.ar_end, header= None, names= col_name.cEnd)\n",
-    "\n"
+    "df_prod = pd.read_excel(ar_xlsx.ar_96)"
    ]
   },
   {
@@ -61,42 +57,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "46beb569",
+   "execution_count": null,
+   "id": "25876670",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dic_end_ger = {'COD' : \"CODPROD\"}\n",
-    "end_ger = end_ger.rename(columns= dic_end_ger)\n",
-    "end_ger['RUA'] = end_ger['RUA'].fillna(0).astype(int)\n",
-    "\n",
-    "dic_bloq = {'Código' : \"CODPROD\", 'Bloqueado(Qt.Bloq.-Qt.Avaria)' : \"BLOQ\"}\n",
-    "df_bloq = df_bloq.rename(columns= dic_bloq)\n",
-    "df_bloq['CODPROD'] = df_bloq['CODPROD'].fillna(0).astype(int)\n",
-    "\n",
-    "dic_end = {\"COD\" : \"CODPROD\"}\n",
-    "df_end = df_end.rename(columns= dic_end)\n",
-    "df_end = df_end[['CODPROD','ENTRADA', 'SAIDA', 'DISP','QTDE']]\n",
-    "col_ajuste = ['CODPROD','ENTRADA', 'SAIDA', 'DISP','QTDE']\n",
-    "for col in col_ajuste:\n",
-    "    df_end[col] = df_end[col].fillna(0).astype(str)\n",
-    "    df_end[col] = df_end[col].str.replace(\".\", \"\")\n",
-    "    df_end[col] = df_end[col].str.replace(\",\", \".\")\n",
-    "    df_end[col] = df_end[col].fillna(0).astype(float)\n",
-    "grupo_end = df_end.groupby('CODPROD').agg(\n",
-    "    SAIDA = ('SAIDA', 'sum'),\n",
-    "    ENTRADA = ('ENTRADA', 'sum'),\n",
-    "    DISP = ('DISP', 'sum'),\n",
-    "    QTDE = ('QTDE', 'sum'),\n",
-    ").reset_index()\n",
-    "\n",
-    "df_prod['CODPROD'] = df_prod['CODPROD'].fillna(0).astype(int)\n",
-    "\n",
-    "df = end_ger.loc[end_ger['RUA'].between(1, 39)]\n",
-    "df = df.merge(df_bloq, left_on='CODPROD',right_on='CODPROD', how= 'left')\n",
-    "df = df.merge(grupo_end, left_on='CODPROD',right_on='CODPROD', how= 'left')\n",
-    "df = df.merge(df_prod, left_on='CODPROD',right_on='CODPROD', how= 'left')\n"
+    "val = df_prod.loc[df_prod['PK_END'] == '2-INTEIRO(1,90)']\n",
+    "val = val[['CODPROD', 'DESCRICAO', 'OBS2','PK_END']]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ce90a6f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -108,8 +84,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "b8ab1cca",
+   "execution_count": 13,
+   "id": "7c919d07",
    "metadata": {},
    "outputs": [
     {
@@ -135,176 +111,57 @@
        "      <th></th>\n",
        "      <th>CODPROD</th>\n",
        "      <th>DESCRICAO</th>\n",
-       "      <th>DEP</th>\n",
-       "      <th>RUA</th>\n",
-       "      <th>PREDIO</th>\n",
-       "      <th>NIVEL</th>\n",
-       "      <th>APTO</th>\n",
-       "      <th>EMBALAGEM</th>\n",
-       "      <th>CAP</th>\n",
-       "      <th>P_REP</th>\n",
-       "      <th>...</th>\n",
-       "      <th>GERENCIAL</th>\n",
-       "      <th>BLOQ</th>\n",
-       "      <th>SAIDA</th>\n",
-       "      <th>ENTRADA</th>\n",
-       "      <th>DISP</th>\n",
-       "      <th>QTDE</th>\n",
-       "      <th>QTUNITCX</th>\n",
-       "      <th>QTTOTPAL</th>\n",
-       "      <th>CAPACIDADE</th>\n",
-       "      <th>PONTOREPOSICAO</th>\n",
+       "      <th>OBS2</th>\n",
+       "      <th>PK_END</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3059</th>\n",
-       "      <td>451985</td>\n",
-       "      <td>CAIXA TERMICA TERMOLAR 32L VM 3502</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>CX/0001/UN</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>144,00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>40</td>\n",
-       "      <td>20</td>\n",
+       "      <th>0</th>\n",
+       "      <td>31901</td>\n",
+       "      <td>UD FERRO SECO BLACK E DECKER TRAD 220V</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2-INTEIRO(1,90)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1067</th>\n",
-       "      <td>430734</td>\n",
-       "      <td>UD GARRAFAO T TERMOLAR 5L AZ 1095</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>UN/0001/UN</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>968,00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>20</td>\n",
-       "      <td>40</td>\n",
-       "      <td>20</td>\n",
+       "      <th>1</th>\n",
+       "      <td>467942</td>\n",
+       "      <td>UD GARRAFAO T INVICTA 12L VERM C/TORNEIR</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2-INTEIRO(1,90)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3058</th>\n",
-       "      <td>451984</td>\n",
-       "      <td>CAIXA TERMICA TERMOLAR 32L CZ 3502</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>CX/0001/UN</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>112,00</td>\n",
+       "      <th>2</th>\n",
+       "      <td>467934</td>\n",
+       "      <td>CAIXA TERMICA COLEMAN 26,5L PRETA TP PTA</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>40</td>\n",
-       "      <td>20</td>\n",
+       "      <td>2-INTEIRO(1,90)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1882</th>\n",
-       "      <td>443712</td>\n",
-       "      <td>UD COPO VDO AMERICANO NADIR 190ML M USO</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>CX/0024/UN</td>\n",
-       "      <td>312.0</td>\n",
-       "      <td>156.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.947,00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4623.0</td>\n",
-       "      <td>4623.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>156</td>\n",
-       "      <td>312</td>\n",
-       "      <td>156</td>\n",
+       "      <th>3</th>\n",
+       "      <td>470859</td>\n",
+       "      <td>UD VENTILADOR CADENCE 40CM 140W 220V</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2-INTEIRO(1,90)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7272</th>\n",
-       "      <td>470423</td>\n",
-       "      <td>UD VENTILADOR MALLORY 30CM TURB 220V</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>UN/0001/UN</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>44,00</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>4</th>\n",
+       "      <td>470868</td>\n",
+       "      <td>CAIXA TERMICA COLEMAN 26,5L VERDE TP VDE</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>48</td>\n",
-       "      <td>64</td>\n",
-       "      <td>16</td>\n",
+       "      <td>2-INTEIRO(1,90)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      CODPROD                                DESCRICAO  DEP  RUA  PREDIO  \\\n",
-       "3059   451985       CAIXA TERMICA TERMOLAR 32L VM 3502  1.0    1       3   \n",
-       "1067   430734        UD GARRAFAO T TERMOLAR 5L AZ 1095  1.0    1       5   \n",
-       "3058   451984       CAIXA TERMICA TERMOLAR 32L CZ 3502  1.0    1       7   \n",
-       "1882   443712  UD COPO VDO AMERICANO NADIR 190ML M USO  1.0    1       8   \n",
-       "7272   470423     UD VENTILADOR MALLORY 30CM TURB 220V  1.0    1      10   \n",
-       "\n",
-       "      NIVEL   APTO   EMBALAGEM    CAP  P_REP  ...  GERENCIAL BLOQ SAIDA  \\\n",
-       "3059    1.0  101.0  CX/0001/UN   40.0   20.0  ...     144,00  0.0   0.0   \n",
-       "1067    1.0  101.0  UN/0001/UN   40.0   20.0  ...     968,00  0.0   0.0   \n",
-       "3058    1.0  101.0  CX/0001/UN   40.0   20.0  ...     112,00  NaN   0.0   \n",
-       "1882    1.0  101.0  CX/0024/UN  312.0  156.0  ...   4.947,00  0.0   0.0   \n",
-       "7272    1.0  102.0  UN/0001/UN   64.0   16.0  ...      44,00  0.0   NaN   \n",
-       "\n",
-       "     ENTRADA    DISP    QTDE  QTUNITCX  QTTOTPAL  CAPACIDADE  PONTOREPOSICAO  \n",
-       "3059     0.0   120.0   120.0         1        20          40              20  \n",
-       "1067     0.0   840.0   840.0         6        20          40              20  \n",
-       "3058     0.0    80.0    80.0         1        20          40              20  \n",
-       "1882     0.0  4623.0  4623.0         1       156         312             156  \n",
-       "7272     NaN     NaN     NaN         1        48          64              16  \n",
-       "\n",
-       "[5 rows x 24 columns]"
+       "   CODPROD                                 DESCRICAO OBS2           PK_END\n",
+       "0    31901    UD FERRO SECO BLACK E DECKER TRAD 220V  NaN  2-INTEIRO(1,90)\n",
+       "1   467942  UD GARRAFAO T INVICTA 12L VERM C/TORNEIR  NaN  2-INTEIRO(1,90)\n",
+       "2   467934  CAIXA TERMICA COLEMAN 26,5L PRETA TP PTA  NaN  2-INTEIRO(1,90)\n",
+       "3   470859      UD VENTILADOR CADENCE 40CM 140W 220V  NaN  2-INTEIRO(1,90)\n",
+       "4   470868  CAIXA TERMICA COLEMAN 26,5L VERDE TP VDE  NaN  2-INTEIRO(1,90)"
       ]
      },
      "metadata": {},
@@ -312,9 +169,7 @@
     }
    ],
    "source": [
-    "df[['RUA', 'PREDIO']] = df[['RUA', 'PREDIO']].astype(int)\n",
-    "df = df.sort_values(by=['RUA', 'PREDIO'], ascending= True)\n",
-    "display(df.head())"
+    "display(val.head())"
    ]
   }
  ],
@@ -334,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.8"
   }
  },
  "nbformat": 4,
