manutenção: > ajustei algumas line do cadastro para uma breve avaliação de estoque > apaguei os bloco dos jupyter deixando so os bloco de importação

--- a/OUTROS/pesquisa.ipynb
+++ b/OUTROS/pesquisa.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "96e4f806",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "f038d8e0",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,8 @@
     }
    ],
    "source": [
-    "df_prod = pd.read_excel(ar_xlsx.ar_96)"
+    "df_prod = pd.read_excel(ar_xlsx.ar_96)\n",
+    "df_estoque = pd.read_csv(ar_csv.ar_07,header=None, names= col_name.c07)"
    ]
   },
   {
@@ -57,22 +58,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "25876670",
    "metadata": {},
    "outputs": [],
    "source": [
-    "val = df_prod.loc[df_prod['PK_END'] == '2-INTEIRO(1,90)']\n",
-    "val = val[['CODPROD', 'DESCRICAO', 'OBS2','PK_END']]"
+    "val = df_prod.loc[(df_prod['OBS2'] == 'FL') & (df_prod['RUA'] == 70)]\n",
+    "ajustado = df_estoque[['COD','PICKING', 'PULMAO','ENDERECO', 'GERENCIAL']]\n",
+    "val = val[['CODPROD', 'DESCRICAO', 'OBS2','RUA']]\n",
+    "final = ajustado.merge(val, left_on='COD', right_on='CODPROD', how= 'inner').fillna(0)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "0ce90a6f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "final.to_excel(output.jupyter,index= False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "7c919d07",
    "metadata": {},
    "outputs": [
@@ -109,59 +115,107 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>COD</th>\n",
+       "      <th>PICKING</th>\n",
+       "      <th>PULMAO</th>\n",
+       "      <th>ENDERECO</th>\n",
+       "      <th>GERENCIAL</th>\n",
        "      <th>CODPROD</th>\n",
        "      <th>DESCRICAO</th>\n",
        "      <th>OBS2</th>\n",
-       "      <th>PK_END</th>\n",
+       "      <th>RUA</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>31901</td>\n",
-       "      <td>UD FERRO SECO BLACK E DECKER TRAD 220V</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2-INTEIRO(1,90)</td>\n",
+       "      <td>32101</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0,00</td>\n",
+       "      <td>0,00</td>\n",
+       "      <td>32101</td>\n",
+       "      <td>ESPONJA 3M LIMPEZA FIBRACO</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>467942</td>\n",
-       "      <td>UD GARRAFAO T INVICTA 12L VERM C/TORNEIR</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2-INTEIRO(1,90)</td>\n",
+       "      <td>249300</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0,00</td>\n",
+       "      <td>0,00</td>\n",
+       "      <td>249300</td>\n",
+       "      <td>MOLHO TOMATE POMAROLA LATA 340GR</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>467934</td>\n",
-       "      <td>CAIXA TERMICA COLEMAN 26,5L PRETA TP PTA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2-INTEIRO(1,90)</td>\n",
+       "      <td>422220</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0,00</td>\n",
+       "      <td>0,00</td>\n",
+       "      <td>422220</td>\n",
+       "      <td>APAR. NOKIA 3120</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>470859</td>\n",
-       "      <td>UD VENTILADOR CADENCE 40CM 140W 220V</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2-INTEIRO(1,90)</td>\n",
+       "      <td>422995</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0,00</td>\n",
+       "      <td>0,00</td>\n",
+       "      <td>422995</td>\n",
+       "      <td>HP LASERJET 3020 MULTIFUNCIONAL N15</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>470868</td>\n",
-       "      <td>CAIXA TERMICA COLEMAN 26,5L VERDE TP VDE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2-INTEIRO(1,90)</td>\n",
+       "      <td>423008</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0,00</td>\n",
+       "      <td>0,00</td>\n",
+       "      <td>423008</td>\n",
+       "      <td>IMPRESSORA HP 3920</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>70</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   CODPROD                                 DESCRICAO OBS2           PK_END\n",
-       "0    31901    UD FERRO SECO BLACK E DECKER TRAD 220V  NaN  2-INTEIRO(1,90)\n",
-       "1   467942  UD GARRAFAO T INVICTA 12L VERM C/TORNEIR  NaN  2-INTEIRO(1,90)\n",
-       "2   467934  CAIXA TERMICA COLEMAN 26,5L PRETA TP PTA  NaN  2-INTEIRO(1,90)\n",
-       "3   470859      UD VENTILADOR CADENCE 40CM 140W 220V  NaN  2-INTEIRO(1,90)\n",
-       "4   470868  CAIXA TERMICA COLEMAN 26,5L VERDE TP VDE  NaN  2-INTEIRO(1,90)"
+       "      COD PICKING PULMAO ENDERECO GERENCIAL  CODPROD  \\\n",
+       "0   32101       0      0     0,00      0,00    32101   \n",
+       "1  249300       0      0     0,00      0,00   249300   \n",
+       "2  422220       0      0     0,00      0,00   422220   \n",
+       "3  422995       0      0     0,00      0,00   422995   \n",
+       "4  423008       0      0     0,00      0,00   423008   \n",
+       "\n",
+       "                             DESCRICAO OBS2  RUA  \n",
+       "0           ESPONJA 3M LIMPEZA FIBRACO   FL   70  \n",
+       "1     MOLHO TOMATE POMAROLA LATA 340GR   FL   70  \n",
+       "2                     APAR. NOKIA 3120   FL   70  \n",
+       "3  HP LASERJET 3020 MULTIFUNCIONAL N15   FL   70  \n",
+       "4                   IMPRESSORA HP 3920   FL   70  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Index(['COD', 'PICKING', 'PULMAO', 'ENDERECO', 'GERENCIAL', 'CODPROD',\n",
+       "       'DESCRICAO', 'OBS2', 'RUA'],\n",
+       "      dtype='object')"
       ]
      },
      "metadata": {},
@@ -169,7 +223,8 @@
     }
    ],
    "source": [
-    "display(val.head())"
+    "display(final.head())\n",
+    "display(final.columns)"
    ]
   }
  ],
@@ -189,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.8"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
