manutenção; ajustei a função diretorio no acesso, tirando ela da função app, no b_abst estou fazendo teste para consolidar os dataframes, sem sucesso

--- a/OUTROS/pesquisa.ipynb
+++ b/OUTROS/pesquisa.ipynb
@@ -10,14 +10,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "96e4f806",
    "metadata": {},
    "outputs": [],
    "source": [
     "from path_arquivos import *\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import glob\n",
+    "import os\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9689266d",
+   "metadata": {},
+   "source": [
+    "EXTRAÇÃO DAS BASES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e55fa16a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\WS_OLIVEIRA\\SCRIPTS\\.venv\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:237: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
+      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = pd.read_excel(r'c:\\WS_OLIVEIRA\\BASE_DADOS\\BASE_8664\\10 - OUTUBRO 8664.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5d138daa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['TIPOBONUS', 'TIPOOPER', 'STATUS', 'CODPROD', 'DESCRICAO', 'CODFORNEC',\n",
+       "       'FORNECEDOR', 'DTLANC', 'DATABONUS', 'DTFECHAMENTO', 'CODFUNCRM',\n",
+       "       'CONFERENTE', 'CODIGOUMA', 'NUMOS', 'DTINICIOOS', 'CODENDERECO',\n",
+       "       'DTFIMOS', 'CODOPERADOR', 'OPERADOR', 'CODEMPILHADOR', 'EMPILHADOR',\n",
+       "       'DATAGERACAO', 'DTVALIDADE', 'TIPOOS', 'NUMBONUS'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "a = a[['TIPOBONUS', 'TIPOOPER', 'STATUS', 'CODPROD','DESCRICAO', 'CODFORNEC', 'FORNECEDOR', 'DTLANC', 'DATABONUS','DTFECHAMENTO', 'CODFUNCRM', 'CONFERENTE', 'CODIGOUMA', 'NUMOS','DTINICIOOS', 'CODENDERECO', 'DTFIMOS', 'CODOPERADOR', 'OPERADOR','CODEMPILHADOR', 'EMPILHADOR', 'DATAGERACAO', 'DTVALIDADE','TIPOOS', 'NUMBONUS', ]]\n",
+    "\n",
+    "display(a.columns)"
    ]
   }
  ],
@@ -37,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
