feat: Implementa a organizacao e categorizacao de dataframes
Adiciona logica para tratar e preparar os dataframes antes da consolidacao
dos dados.

As principais mudancas incluem:
* Funcao de pre-processamento para ordenar dataframes.
* Categorizacao das Ordens de Servico (O.S.) em 'FIM', 'PD' e 'Geral'.
* Adicao da contagem de bonus na logica de consolidacao.

--- a/OUTROS/pesquisa.ipynb
+++ b/OUTROS/pesquisa.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "96e4f806",
    "metadata": {},
    "outputs": [
@@ -32,11 +32,12 @@
     "import glob\n",
     "import os\n",
     "\n",
-    "cons64 = pd.read_excel(bi_abst.cons_64)\n",
     "cons28 = pd.read_excel(bi_abst.cons_28)\n",
-    "\n",
+    "cons64 = pd.read_excel(bi_abst.cons_64)\n",
+    "func = pd.read_excel(bi_abst.func, sheet_name='FUNC')\n",
     "m_atual28 = pd.read_excel(bi_abst.m_atual28)\n",
-    "m_atual64 = pd.read_excel(bi_abst.m_atual64)\n"
+    "m_atual64 = pd.read_excel(bi_abst.m_atual64)\n",
+    "\n"
    ]
   },
   {
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "6c34faba",
    "metadata": {},
    "outputs": [],
@@ -61,34 +62,107 @@
     "\n",
     "    if id == 1:\n",
     "        df = df[['NUMOS', 'DATA', 'CODROTINA', 'POSICAO', 'CODFUNCGER', 'FUNCGER','DTFIMOS', 'CODFUNCOS', 'FUNCOSFIM', 'Tipo O.S.', 'TIPOABAST', 'MES']].copy()\n",
+    "        \n",
     "        df = df.loc[(df['CODROTINA'] == 1709) | (df['CODROTINA'] == 1723)]\n",
     "        return df\n",
     "    elif id ==2: \n",
     "        df = df[['DATAGERACAO', 'DTLANC', 'NUMBONUS', 'NUMOS', 'CODEMPILHADOR','EMPILHADOR', 'MES']].copy()\n",
     "        df = df.drop_duplicates(subset=['NUMOS'])\n",
-    "        return df\n",
-    "\n",
-    "\n",
-    "m_atual64 = organizar_df(m_atual64, 'DATAGERACAO', 2)\n",
-    "cons64 = organizar_df(cons64, 'DATAGERACAO', 2)\n",
-    "cons64 = cons64.loc[cons64['MES'] != 10]\n",
-    "\n",
-    "m_atual28 = organizar_df(m_atual28,'DATA',1)\n",
-    "cons28 = organizar_df(cons28,'DATA',1)"
+    "        return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
+   "id": "2fc9075b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "func = func.loc[func['AREA'] == 'EXPEDICAO']\n",
+    "\n",
+    "m_atual28 = organizar_df(m_atual28,'DATA',1)\n",
+    "cons28 = organizar_df(cons28,'DATA',1)\n",
+    "cons28 = cons28.loc[cons28['MES'] != 10]\n",
+    "cons28 = pd.concat([cons28, m_atual28], ignore_index= True)\n",
+    "\n",
+    "m_atual64 = organizar_df(m_atual64, 'DATAGERACAO', 2)\n",
+    "cons64 = organizar_df(cons64, 'DATAGERACAO', 2)\n",
+    "cons64 = cons64.loc[cons64['MES'] != 10]\n",
+    "cons64 = pd.concat([cons64, m_atual64], ignore_index= True)\n",
+    "\n",
+    "grop28 = cons28.groupby(['DATA','CODFUNCOS','FUNCOSFIM']).agg(\n",
+    "    QTDE_OS = (\"NUMOS\", 'nunique'),\n",
+    "    OS_50 = (\"Tipo O.S.\", lambda x: (x == '50 - Movimentação De Para').sum()),\n",
+    "    OS_61 = (\"Tipo O.S.\", lambda x: (x == '61 - Movimentação De Para Horizontal').sum()),\n",
+    "    OS_58 = (\"Tipo O.S.\", lambda x: (x == '58 - Transferencia de Para Vertical').sum())\n",
+    ").reset_index()\n",
+    "grop28['50_61'] = grop28['OS_50'] + grop28['OS_61']\n",
+    "grop64 = cons64.groupby(['DATAGERACAO','CODEMPILHADOR']).agg(\n",
+    "    OS_RECEB = (\"NUMOS\", 'nunique')\n",
+    ").reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1ecbe59f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_os_geral = func.merge(grop28, left_on='ID_FUNC', right_on='CODFUNCOS', how= 'left')\n",
+    "df_os_geral = df_os_geral.merge(grop64, left_on=['ID_FUNC', 'DATA'], right_on= ['CODEMPILHADOR','DATAGERACAO'], how='left').drop(columns=['DATAGERACAO','CODEMPILHADOR', 'CODFUNCOS', 'FUNCOSFIM'])\n",
+    "df_os_geral = df_os_geral.fillna(0)\n",
+    "df_os_geral = df_os_geral.loc[df_os_geral['DATA'] != 0]\n",
+    "\n",
+    "\n",
+    "\n",
+    "bonus = cons64.groupby(['DTLANC']).agg(\n",
+    "    TOTAL_BONUS = (\"NUMBONUS\", \"nunique\")\n",
+    ").reset_index().sort_values(by='DTLANC', ascending= False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "22a38cb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os_temp28 = cons28[['NUMOS', 'DATA']].copy()\n",
+    "os_temp64 = cons64[['NUMOS','DATAGERACAO']].copy()\n",
+    "os_temp64 = os_temp64.rename(columns={'DATAGERACAO' : 'DATA'})\n",
+    "os_geral = pd.concat([os_temp28,os_temp64], ignore_index= True)\n",
+    "os_geral = os_geral.groupby('DATA').agg(\n",
+    "    TOTAL_OS = ('NUMOS', 'nunique')\n",
+    ").reset_index()\n",
+    "\n",
+    "ped_28 = cons28.loc[cons28['POSICAO'] == \"P\"]\n",
+    "ped_28 = ped_28.groupby(['CODFUNCGER','DATA']).agg(\n",
+    "    TOTAL_PD = ('NUMOS', 'nunique')\n",
+    ").reset_index()\n",
+    "\n",
+    "cons64['CODEMPILHADOR'] = cons64['CODEMPILHADOR'].fillna(0)\n",
+    "cons64['CODFUNCGER'] =1\n",
+    "ped_64 = cons64.loc[cons64['CODEMPILHADOR'] == 0]\n",
+    "ped_64 = ped_64.rename(columns= {'DTLANC':'DATA'})\n",
+    "ped_64 = ped_64.groupby(['CODFUNCGER','DATA']).agg(\n",
+    "    TOTAL_PD = ('NUMOS', 'nunique')\n",
+    ").reset_index()\n",
+    "\n",
+    "pd_geral = pd.concat([ped_28,ped_64], ignore_index= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "a13ffe10",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['NUMOS', 'DATA', 'CODROTINA', 'POSICAO', 'CODFUNCGER', 'FUNCGER',\n",
-       "       'DTFIMOS', 'CODFUNCOS', 'FUNCOSFIM', 'Tipo O.S.', 'TIPOABAST', 'MES'],\n",
-       "      dtype='object')"
+       "Index(['CODFUNCGER', 'DATA', 'TOTAL_PD'], dtype='object')"
       ]
      },
      "metadata": {},
@@ -96,10 +170,117 @@
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CODFUNCGER</th>\n",
+       "      <th>DATA</th>\n",
+       "      <th>TOTAL_PD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1260.0</td>\n",
+       "      <td>2025-08-23</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1260.0</td>\n",
+       "      <td>2025-10-25</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1260.0</td>\n",
+       "      <td>2025-10-27</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1272.0</td>\n",
+       "      <td>2025-08-27</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1272.0</td>\n",
+       "      <td>2025-10-14</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2025-10-21</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2025-10-22</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2025-10-23</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2025-10-24</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2025-10-27</td>\n",
+       "      <td>333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>180 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['NUMOS', 'DATA', 'CODROTINA', 'POSICAO', 'CODFUNCGER', 'FUNCGER',\n",
-       "       'DTFIMOS', 'CODFUNCOS', 'FUNCOSFIM', 'Tipo O.S.', 'TIPOABAST', 'MES'],\n",
-       "      dtype='object')"
+       "     CODFUNCGER       DATA  TOTAL_PD\n",
+       "0        1260.0 2025-08-23         1\n",
+       "1        1260.0 2025-10-25         7\n",
+       "2        1260.0 2025-10-27         6\n",
+       "3        1272.0 2025-08-27         2\n",
+       "4        1272.0 2025-10-14         5\n",
+       "..          ...        ...       ...\n",
+       "175         1.0 2025-10-21        14\n",
+       "176         1.0 2025-10-22        13\n",
+       "177         1.0 2025-10-23        26\n",
+       "178         1.0 2025-10-24        42\n",
+       "179         1.0 2025-10-27       333\n",
+       "\n",
+       "[180 rows x 3 columns]"
       ]
      },
      "metadata": {},
@@ -107,8 +288,10 @@
     }
    ],
    "source": [
-    "display(m_atual28.columns)\n",
-    "display(cons28.columns)\n",
+    "\n",
+    "display(pd_geral.columns)\n",
+    "display(pd_geral)\n",
+    "\n",
     "\n",
     "\n"
    ]
